# Nanodbc4J

./: .actrc  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  NOTICE  README.md  build.gradle.kts  gradle.properties  pom.xml  settings.gradle.kts
.github/workflows/: build.yml  maven-release.yml
cpp/include/: datasource.h  error_info.h  nanodbc_c.h  odbc_api.h  string_utils.h  utils.h
cpp/include/api/: api.h  connection.h  database_metadata.h  export.h  meta_data.h  odbc.h  result.h  result_set_meta_data.h  statement.h
cpp/include/core/: chunked_binary_stream.hpp  connection.hpp  database_metadata.hpp  error_codes.hpp  isolation_level.hpp  nanodbc_defs.h  number_proxy.hpp  result_set.hpp  result_set_meta_data.h  result_set_meta_data.hpp  string_proxy.hpp  wide_string.hpp
cpp/include/jni/: io_github_nanodbc4j_internal_binding_jni_Native.h
cpp/include/struct/: binary_array.h  database_metadata_c.h  error_info.h  meta_data.h  meta_data_c.h  nanodbc_c.h  result_set_meta_data_c.h
cpp/include/utils/: io.hpp  logger.hpp  number_proxy.hpp  path_utils.h  strhash.h  strhash.hpp  string_utils.hpp  struct_converter.h
cpp/src/: error_info.cpp  odbc_api.cpp  string_utils.cpp  utils.cpp
cpp/src/api/: connection.cpp  database_metadata.cpp  meta_data.cpp  odbc.cpp  result.cpp  result_set_meta_data.cpp  statement.cpp
cpp/src/core/: chunked_binary_stream.cpp  connection.cpp  database_metadata.cpp  isolation_level.cpp  number_proxy.cpp  result_set.cpp  result_set_meta_data.cpp  string_proxy.cpp
cpp/src/jni/: io_github_nanodbc4j_internal_binding_jni_Native.cpp
cpp/src/struct/: binary_array.cpp  database_metadata_c.cpp  error_info.cpp  meta_data.cpp  meta_data_c.cpp  nanodbc_c.cpp  result_set_meta_data_c.cpp
cpp/src/utils/: io.cpp  logger.cpp  number_proxy.cpp  path_utils.cpp  string_proxy.cpp  string_utils.cpp  struct_converter.cpp
cpp/tests/: CMakeLists.txt  test_connection_api.cpp  test_database_metadata.cpp  test_odbc_api.cpp  test_result_set_meta_data.cpp  test_resultset_api.cpp  test_statement_api.cpp  test_utils.cpp  test_utils.hpp
gradle/wrapper/: gradle-wrapper.properties
src/main/java/: module-info.java
src/main/java/io/github/michael1297/core/: Datasource.java  DatasourcePtr.java  NanodbcConnection.java  NanodbcDriver.java  NanodbcPreparedStatement.java  NanodbcResultSet.java  NanodbcResultSetMetaData.java  NanodbcStatement.java  NativeDB.java  NativeError.java  NativeException.java  NativeMemory.java  PointerTracker.java  SpdLogLevel.java
src/main/java/io/github/michael1297/core/metadata/: Datasource.java  Driver.java  MetaData.java
src/main/java/io/github/michael1297/core/pointer/: ArrayPtr.java  ConnectionPtr.java  ObjectPointer.java  ResultSetPtr.java  StatementPtr.java  StringPtr.java
src/main/java/io/github/michael1297/core/struct/: DatasourceStruct.java  NativeError.java
src/main/java/io/github/michael1297/dto/: DatasourceDto.java
src/main/java/io/github/michael1297/exceptions/: NanodbcSQLException.java  NativeException.java
src/main/java/io/github/michael1297/internal/: LibraryLoader.java  NativeDB.java  PointerTracker.java
src/main/java/io/github/michael1297/internal/cstruct/: DatabaseMetaDataStruct.java  DatasourceStruct.java  DateStruct.java  DriverStruct.java  NativeError.java  ResultSetMetaDataStruct.java  TimeStruct.java  TimestampStruct.java
src/main/java/io/github/michael1297/internal/dto/: DatabaseMetaDataDto.java  DatasourceDto.java  DriverDto.java  OdbcDatabaseMetaData.java  OdbcDatasource.java  OdbcDriver.java  OdbcResultSetMetadata.java  ResultSetMetadataDto.java
src/main/java/io/github/michael1297/internal/handler/: ConnectionHandler.java  DatabaseMetaDataHandler.java  DriverHandler.java  Handler.java  MetaDataHandler.java  OdbcDatabaseMetaDataHandler.java  OdbcResultSetMetaDataHandler.java  ResultSetHandler.java  ResultSetMetaDataHandler.java  StatementHandler.java
src/main/java/io/github/michael1297/internal/pointer/: ArrayPtr.java  ConnectionPtr.java  MetaDataPtr.java  ObjectPointer.java  OdbcDatabaseMetaDataPrt.java  OdbcResultSetMetaDataPtr.java  ResultSetPtr.java  StatementPtr.java  StringPtr.java
src/main/java/io/github/michael1297/internal/struct/: AttributeStruct.java  DatabaseMetaDataStruct.java  DatasourceStruct.java  DateStruct.java  DriverStruct.java  MetaDataStruct.java  NativeError.java  ResultSetMetaDataStruct.java  TimeStruct.java  TimestampStruct.java
src/main/java/io/github/michael1297/internal/utils/: Handler.java
src/main/java/io/github/michael1297/jdbc/: NanodbcConnection.java  NanodbcDatabaseMetaData.java  NanodbcDatabaseMetaDataResultSet.java  NanodbcDriver.java  NanodbcPreparedStatement.java  NanodbcResultSet.java  NanodbcResultSetMetaData.java  NanodbcStatement.java  SpdLogLevel.java
src/main/java/io/github/michael1297/jdbc/metadata/: Datasource.java  Driver.java  MetaData.java  OdbcDatabaseMetaData.java  OdbcDatasource.java  OdbcDriver.java  OdbcResultSetMetadata.java
src/main/java/io/github/nanodbc4j/dto/: DatasourceProperties.java  DriverProperties.java
src/main/java/io/github/nanodbc4j/exceptions/: NanodbcSQLException.java  NanodbcSQLFeatureNotSupportedException.java  NativeException.java
src/main/java/io/github/nanodbc4j/internal/: LibraryLoader.java  NativeDB.java
src/main/java/io/github/nanodbc4j/internal/binding/: ConnectionApi.java  DatabaseMetaDataApi.java  LibraryLoader.java  OdbcApi.java  ResultApi.java  ResultSetMetaDataApi.java  (+1 more)
src/main/java/io/github/nanodbc4j/jdbc/: JdbcWrapper.java  NanodbcBinaryStream.java  NanodbcConnection.java  NanodbcDatabaseMetaData.java  NanodbcDriver.java  NanodbcPreparedStatement.java  NanodbcResultSet.java  NanodbcResultSetMetaData.java  NanodbcStatement.java  SpdLogLevel.java
src/main/java/io/github/nanodbc4j/logging/: EnhancedSimpleFormatter.java
src/main/resources/: logging.properties
src/test/java/io/github/nanodbc4j/jdbc/: BaseTest.java  NanodbcConnectionTest.java  NanodbcDatabaseMetaDataTest.java  NanodbcResultSetMetaDataTest.java  NanodbcResultSetTest.java  NanodbcStatementTest.java
(+28 files in other folders)
